--- a/Express_website/views/index.hbs
+++ b/Express_website/views/index.hbs
@@ -1,2 +1,2 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Welcome to {{title}}, testing running this webapp from within a container using docker-compose</p>
